# 01_homework

./: CMakeLists.txt  build.sh  version.hpp.in
.github/workflows/: build.yml
src/: main.cpp
test/: version_test.cpp
